Project ppotto {
  database_type: 'PostgreSQL'
  Note: '''
  마이그레이션 시 수동 반영 (DBML 표현 불가)
  - CREATE EXTENSION IF NOT EXISTS citext;
  - partial unique 로 교체:
    uk_users_provider_uid -> WHERE deleted_at IS NULL
    uk_analysis_active -> WHERE status IN ('UPLOADING','ANALYZING')
    uk_photos_burst_representative -> UNIQUE (burst_group_id) WHERE is_representative = true
  - CHECK 제약 (LLM 파이프라인이 직접 쓰는 경로라 API 검증이 닿지 않음):
    stickers: (type='IMAGE' AND image_key IS NOT NULL) OR (type='TEXT' AND text_content IS NOT NULL)
    drawings: (scope='STICKER') = (sticker_id IS NOT NULL)
    drawings: (type='STROKE') = (stroke IS NOT NULL AND stroke_width IS NOT NULL)
    drawings: (type='TEXT') = (content IS NOT NULL AND font_size IS NOT NULL
                               AND pos_x IS NOT NULL AND pos_y IS NOT NULL AND max_width IS NOT NULL)
    recap_comments: (pos_x IS NULL) = (pos_y IS NULL)
    analysis: progress BETWEEN 0 AND 100 (실제 마이그레이션은 DDL 인라인 CHECK 로 반영됨)
  '''
}

// ── enums ────────────────────────────────
Enum oauth_provider {
  KAKAO
  APPLE
}

Enum analysis_status {
  UPLOADING  [note: '세션 생성 = URL 발급이라 이게 시작 상태']
  ANALYZING
  COMPLETED
  FAILED     [note: '처리 실패/사용자 취소/만료. failed_code로 구분']
}

Enum photo_upload_status {
  PENDING  [note: 'signed URL 발급됨. 업로드 확인 전']
  COMPLETED [note: 'GCS 오브젝트 존재 확인됨']
  FAILED   [note: '만료/실패. 분석 대상에서 제외']
}

Enum sticker_type {
  IMAGE [note: '이미지형. 피사체/장면 구분 없음']
  TEXT  [note: '텍스트형']
}

Enum drawing_scope {
  STICKER [note: '스티커 묶음에 포함']
  BOARD   [note: '보드 배경에 고정']
}

Enum drawing_type {
  STROKE [note: '선. stroke/stroke_width 를 채운다']
  TEXT   [note: '텍스트. content/font_size/pos_x/pos_y/max_width 를 채운다']
}

// ── 공통 조각 ─────────────────────────────
TablePartial base_id {
  id uuid [pk, default: `uuidv7()`, note: 'PG18 내장 uuidv7(). 동일 taken_at 정렬이 생성 순서에 의존하므로 앱단 생성 금지']
}

TablePartial timestamps {
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

TablePartial soft_delete {
  deleted_at timestamptz [null, note: 'NULL이면 활성']
}

// ── 계정 ──────────────────────────────────
Table users {
  ~base_id
  provider               oauth_provider [not null]
  provider_user_id       text           [not null, note: '카카오 id / 애플 sub']
  provider_refresh_token text           [null, note: '애플 revoke API용. 만료 없음. 카카오는 NULL. 암호화 저장(마이그레이션 요건)']

  email citext [not null, note: '애플은 private relay 가능. 카카오는 미동의 시 로그인 거부']
  name  text   [not null, note: '카카오는 닉네임, 애플은 최초 로그인 요청의 name. 기존 행은 홍길동으로 backfill']

  ~timestamps
  ~soft_delete

  Note: '''
  소셜 계정 1개 = 서비스 계정 1개. 서비스 refresh token은 Redis.
  email은 UNIQUE 아님(카카오/애플 각각 가입 시 중복 가능).
  이메일은 필수. 카카오는 이메일 동의를 안 하면 가입/로그인을 거부하고
  클라가 추가 동의(account_email)를 받아 재시도한다.

  탈퇴 시 email 과 provider_refresh_token 은 즉시 익명화한다.
  나머지는 soft delete 후 유예기간이 지나면 배치가 하드 삭제한다.

  [유예기간과 하드 삭제 배치]
  유예기간 일수는 이 문서가 값을 정하지 않으므로 서버 설정
  user.withdrawn-cleanup.retention-days 로 관리한다. 개인정보 처리방침이
  값을 확정하면 여기에 명시하고 설정 기본값을 맞춘다.
  배치는 user.withdrawn-cleanup.enabled 로 켜고 끄며 기본값은 꺼짐이다.

  하드 삭제 순서는 참조 및 애플리케이션 소유권 방향을 따른다.
  stickers(+ sticker_photos, recap_comments) -> photos -> analysis
  -> drawings -> boards -> term_agreements -> users.
  term_agreements 는 users 를 참조하는 유일한 FK 라 users 보다 먼저 지운다.
  각 도메인은 자기 트랜잭션에서 지우고 GCS 오브젝트를 행보다 먼저 지운다.
  중간에 실패하면 users 행이 남아 다음 실행이 같은 순서를 다시 수행한다(멱등).
  '''

  indexes {
    (provider, provider_user_id) [unique, name: 'uk_users_provider_uid', note: 'export 후 WHERE deleted_at IS NULL 추가']
  }
}

Table terms {
  ~base_id
  code         text        [not null, note: 'TOS / PRIVACY']
  version      text        [not null]
  is_required  boolean     [not null, default: true]
  content_url  text        [null, note: '노션 페이지 등 외부 링크']
  effective_at timestamptz [not null, note: '시행일']
  ~timestamps

  Note: '''
  code 별로 effective_at <= now() 인 것 중 가장 최근 행이 현재 버전이다.
  version 은 text 라 정렬 기준이 될 수 없으므로 표시용으로만 쓴다.
  개정은 새 행을 추가하고 effective_at 을 미래로 두면 예약된다.
  '''

  indexes {
    (code, version)      [unique, name: 'uk_terms_code_version']
    (code, effective_at) [name: 'ix_terms_code_effective']
  }
}

Table term_agreements {
  ~base_id
  user_id   uuid        [not null, ref: > users.id]
  term_id   uuid        [not null, ref: > terms.id]
  agreed_at timestamptz [not null, default: `now()`]

  Note: '''
  동의 이력. 약관 개정 시 새 term 행 + 새 동의 행으로 누적.
  재동의 대상 판정: 현재 버전 term_id 중 이 테이블에 없는 것.

  users 를 참조하는 유일한 FK 라 탈퇴 하드 삭제 배치가 users 보다 먼저 지운다.
  terms 자체는 공용 마스터 데이터라 배치가 지우지 않는다.
  '''

  indexes {
    (user_id, term_id) [unique, name: 'uk_term_agreement']
    term_id [name: 'ix_term_agreement_term']
  }
}

// ── 보드 ──────────────────────────────────
Table boards {
  ~base_id
  user_id uuid [not null]
  name    text [not null, note: '최대 10자. 미지정 시 서버가 기본 이름 부여, 사용자가 변경 가능']
  ~timestamps
  ~soft_delete

  Note: '''
  유저당 최대 100개. 가입 시 기본 보드 1개를 자동 생성한다.
  개수 검증은 생성 시점에 활성 보드 수로 한다.

  삭제하면 스티커, 리캡, 드로잉도 함께 soft delete 한다.
  마지막 남은 보드와 진행 중인 분석의 대상 보드는 삭제할 수 없다.
  '''

  indexes {
    (user_id, created_at) [name: 'ix_board_user_created']
  }
}

// ── 분석 ─────────────────────────────────
Table analysis {
  ~base_id
  user_id       uuid           [not null]
  board_id      uuid           [not null, note: '분석 결과 스티커가 붙을 보드']
  status        analysis_status [not null, default: 'UPLOADING']
  progress      int            [not null, default: 0, note: '0~100. 로딩 화면 진행률']
  failed_code   varchar(20)    [null, note: 'AnalysisErrorCode의 코드 문자열. 도입 이전 실패 이력은 NULL 가능']
  failed_reason text           [null]
  started_at    timestamptz    [null]
  completed_at  timestamptz    [null]
  notification_requested_at timestamptz [null, note: '완료·실패 푸시 알림을 신청한 시각. NULL이면 미신청']
  ~timestamps

  Note: '''
  사진 업로드 1회 = 세션 1개. 결과로 스티커가 최대 6개 생성되어
  board_id 보드에 붙는다.

  그룹핑·제외 과정은 클라가 처리하므로 서버에는 남기지 않는다.
  업로드된 사진은 전부 분석에 사용한다(대표/열람용 구분 없음).
  signed URL 을 일괄 발급할 때 photos 를 미리 만들어 두므로
  업로드 도중에도 진행률 분모가 확정되어 있다.
  사진 그룹 수 검증(정책상 20~100그룹, 그룹당 최대 10장)은 발급 요청 시점에 한다.

  새 분석 완료 시 서버가 스티커를 배치한다.
  새 스티커는 중앙에 크게, 기존 스티커는 외곽에 작게 재배치한다.

  동시 분석은 보드와 무관하게 유저당 1개다. uk_analysis_active 로 강제한다.

  로딩 화면 문구는 클라가 만들고 서버는 관여하지 않는다.
  서버는 status, progress, failed_code, failed_reason 을 제공한다.
  notification_requested_at 은 분석마다 독립적인 일회성 알림 신청 상태다.
  failed_code 는 enum 이름이 아닌 ANALYSIS-007 등의 코드 문자열이며
  값이 없는 기존 실패 행은 NULL 을 유지한다.

  성공한 스티커가 1개 이상이면 성공 결과만 저장하고 COMPLETED 로 전환한다.
  스티커·리캡 저장과 COMPLETED 전환은 같은 트랜잭션으로 처리한다.
  성공이 0개면 FAILED 이며, 전부 명시적 대상 없음은 ANALYSIS-012,
  생성 오류가 하나라도 있으면 ANALYSIS-013 이다.
  분류 호출 실패는 ANALYSIS-017, 응답 검증 실패는 ANALYSIS-007,
  결과 저장 실패는 ANALYSIS-014, 나머지 처리 오류는 ANALYSIS-015 이다.

  UPLOADING 취소는 FAILED / ANALYSIS-016 / CANCELED 로 기록한다.
  만료 배치는 updated_at 이 설정된 타임아웃(기본 60분)보다 오래된
  UPLOADING/ANALYZING 을 FAILED / ANALYSIS-015 / EXPIRED 로 전환한다.
  기본 10분 간격으로 실행하며 취소와 같은 사진 실패 처리·오브젝트 정리를 사용한다.
  만료 시 푸시는 보내지 않는다. 종료된 행은 uk_analysis_active 점유에서 제외되어
  사용자가 새 분석을 생성할 수 있다.
  이미 종료된 분석에는 뒤늦게 완료된 작업이 결과를 저장할 수 없다.
  '''

  indexes {
    (user_id, created_at) [name: 'idx_analysis_user_created']
    user_id [unique, name: 'uk_analysis_active', note: 'export 후 WHERE status IN (UPLOADING, ANALYZING) 부분 유니크로 교체. 진행 중 분석 1개를 DB가 강제(더블탭 이중 분석 차단)']
    board_id [name: 'idx_analysis_board_id']
  }
}

// ── 사진 ──────────────────────────────────
Table photos {
  ~base_id
  analysis_id uuid        [not null, note: '소속 분석']
  board_id    uuid        [not null, note: '소유권 스코프 조회용. analysis 를 거치지 않고 보드 단위로 필터한다']
  content_type varchar(50) [not null, note: 'image/jpeg 등 MIME. GCS Content-Type 헤더와 오브젝트 키 확장자에 사용']

  upload_status photo_upload_status [not null, default: 'PENDING']
  uploaded_at   timestamptz         [null]

  taken_at timestamptz [not null, note: '사진 시각. 클라가 준 값을 그대로 저장한다']

  burst_group_id    uuid    [null, note: '연사 세트 식별자. 서버가 그룹 생성 시 발급. NULL이면 단독 사진']
  is_representative boolean [not null, default: true, note: '화면에 보여줄 사진 여부. 단독 사진은 항상 true. 연사 그룹은 정확히 1장만 true']

  ~timestamps

  Note: '''
  signed URL 발급 시점에 행을 만든다. 클라가 GCS 로 직접 올리므로
  서버는 업로드 완료를 스스로 알 수 없다. upload_status 로 추적하고
  COMPLETED 인 행 전부를 분석에 넣는다.
  조회는 서버가 읽기용 signed URL 을 만들어 응답에 실어 준다.
  COMPLETED 전환은 분석 시작 시점에 서버가 GCS 오브젝트 존재를 확인해
  수행하고, 누락되거나 0바이트인 사진은 FAILED 로 남긴다.
  오브젝트 키는 photos/{analysis_id}/{photo_id}.{확장자} 로 파생하므로 저장하지 않는다.

  스티커에 연결되는 사진은 열람용까지 전부 서버에 보관한다(기기가 바뀌어도 리캡 유지).
  사용자가 제외한 사진은 애초에 업로드되지 않으므로 제외 이력 컬럼이 없다.
  보관·삭제 기준은 개인정보 처리방침을 따른다.
  탈퇴 시 유예기간이 지나면 GCS 오브젝트까지 배치가 하드 삭제한다.
  사진 원본은 photos/{analysis_id}/ prefix 단위로 지우고, 스티커 생성 이미지는
  stickers.image_key 단위로 지운다. 둘 다 행 삭제보다 먼저 수행한다.

  정렬은 (taken_at, id). taken_at 이 같으면 uuidv7 이 발급 요청 배열 순서를
  보존하므로 별도 seq 컬럼을 두지 않는다.

  [연사(burst) 그룹]
  signed URL 발급 요청에서 클라가 사진을 그룹 단위로 묶어 보낸다(원소 1개면 단독,
  2개 이상이면 연사). burst_group_id 값 자체는 클라가 만들지 않고, 서버가
  연사 그룹마다 새 UUID를 발급해 그룹 내 모든 행에 부여한다.
  is_representative 는 "여러 후보 중 고른 사진"이 아니라 "이 순간을 화면에
  보여줄 사진"이라는 의미라서, 단독 사진도 기본값 true 다. burst_group_id 가
  NULL 인 행끼리는 유니크 인덱스에서 서로 다르게 취급되므로 단독 사진이 여러 장
  true여도 "그룹당 대표 1장" 제약과 충돌하지 않는다. 연사 그룹은 정확히 1장만
  true여야 하며 이는 부분 유니크 인덱스(uk_photos_burst_representative)로 강제한다.

  [메타데이터 보관 기준]
  픽셀에서 읽어낼 수 있는 값(대표 색상, 피사체, 장소, 이미지 속 텍스트 등)은
  저장하지 않는다. 멀티모달 모델이 GCS 이미지를 직접 보고 판단한다.
  taken_at 만 남기는데, 이건 이미지에 담기지 않는 정보다.
  값의 출처(EXIF, 갤러리 등록 시각 등)는 클라가 정하고 서버는 받은 값을 믿는다.
  GPS는 쓰지 않기로 해서 저장하지 않는다.
  이 기준은 photos 원본 메타데이터에 한정된다. 스티커처럼 분석 결과로 한 번
  생성되면 이후 재계산 없이 그대로 재사용해야 하는 파생 산출물(예:
  stickers.main_color)에는 적용되지 않는다.
  '''

  indexes {
    analysis_id    [name: 'idx_photos_analysis_id']
    board_id       [name: 'idx_photos_board_id']
    burst_group_id [name: 'idx_photos_burst_group_id']
  }
}

// ── 스티커 ─────────────────────────────────
Table stickers {
  ~base_id
  analysis_id uuid        [not null, ref: > analysis.id, note: '이 스티커를 만든 분석']
  board_id   uuid         [not null, ref: > boards.id]
  type       sticker_type [not null]

  title     text        [not null, note: '최대 15자. 제목 뱃지 문구이자 리캡 제목. LLM 생성도 이 제한을 따른다']
  summary   text        [not null, note: '최대 100자. 리캡 "한 줄 요약" 강조 문장. 스티커당 정확히 1개다. 제목 뱃지(title)와는 별개 개념이며 사용자가 수정할 수 없다. LLM 생성도 이 제한을 따른다']
  viewed_at timestamptz [null, note: 'NULL이면 신규 = 빨간 점 표시. 리캡 진입 시 채운다']

  source_photo_id uuid [null, ref: > photos.id, note: '이미지형일 때 원본 사진']
  image_key       text [null, note: '서버가 누끼 처리해 올린 스티커 PNG 키. 이미지형은 필수']
  text_content    text [null, note: '텍스트형일 때 문구']
  main_color      varchar(7) [not null, default: '#222222', note: '스티커 대상의 대표 색상(hex). 리캡 상세 화면 배경색으로 쓰인다. Gemini 분류 단계에서 추출하며, 재생성 시 함께 갱신된다']

  regeneration_locked_until timestamptz [null, note: '이미지 재생성 진행 중 잠금 만료 시각. NULL이면 재생성 가능. 재생성 종료 시(성공/실패 무관) 즉시 NULL로 되돌린다 — 정상 흐름에서는 도달하지 않는 크래시 복구용 상한']

  // 링크 공유
  share_token  text    [null, unique, note: '공유 링크 토큰. NULL이면 비공개다. GET /stickers/shared/{shareToken} 이 이 컬럼으로만 스티커를 찾는다. 만료는 없고 소유자가 NULL로 되돌릴 때까지 유효하다']
  share_photos boolean [not null, default: false, note: 'false면 공유 링크 응답의 photos 가 빈 배열이다. 서버가 사진 읽기 URL 자체를 발급하지 않으므로 클라이언트가 무엇을 보내도 원본은 새지 않는다']

  // 보드 상 배치
  pos_x    double  [null, note: '클라이언트가 배치를 정하기 전에는 NULL']
  pos_y    double  [null, note: '클라이언트가 배치를 정하기 전에는 NULL']
  scale    double  [not null, default: 1]
  rotation double  [not null, default: 0, note: 'degree']
  z_index  integer [null, note: '클라이언트가 배치를 정하기 전에는 NULL']

  // 제목 뱃지 (스티커에 1:1로 붙는다)
  badge_offset_x double [not null, default: 0, note: '스티커 기준 상대 좌표. 일정 범위 내로 제한']
  badge_offset_y double [not null, default: 0]
  badge_rotation double [not null, default: 0]

  ~timestamps
  ~soft_delete

  Note: '''
  분석 1회당 최대 6개 생성. 기존 스티커와 유사해도 병합하지 않고 별도로 추가.
  리캡은 스티커 1개당 1개다. sticker_photos 와 recap_comments 가 연결된다.

  "스티커 묶음" = 스티커 + 제목 뱃지 + scope=STICKER 인 드로잉.
  개별 메뉴(공유하기/삭제하기)와 이동/크기변경은 모두 묶음 단위로 동작한다.
  공유 이미지에도 뱃지와 드로잉을 합성해 하나의 이미지로 만든다.

  제목을 수정해도 viewed_at 에는 영향을 주지 않는다.
  삭제하면 연결된 드로잉과 리캡 데이터도 함께 soft delete 한다.
  배치값은 편집 모드를 끌 때마다 서버에 저장한다.
  리캡 상세 조회는 본인만 가능하다. 남에게 보여주는 경로는 share_token 링크 하나뿐이며,
  공유 해제(share_token = NULL)와 스티커 삭제(deleted_at) 모두 링크를 즉시 무효화한다.

  생성 직후에는 pos_x/pos_y/z_index가 NULL이다. 이 값은 다른 스티커와 겹치지 않게 정해야 해서
  보드 전체 상태를 아는 클라이언트가 계산해 레이아웃 수정 API로 채운다. scale/rotation은 생성 시
  서버가 항상 1/0으로 채운다.
  '''

  indexes {
    (board_id, z_index) [name: 'ix_sticker_board_z']
    analysis_id [name: 'ix_sticker_analysis']
    source_photo_id [name: 'ix_sticker_source_photo', note: '사진 파기 배치의 역방향 조회용']
    share_token [unique, name: 'uk_stickers_share_token']
  }
}

Table sticker_photos {
  ~base_id
  sticker_id uuid [not null, ref: > stickers.id]
  photo_id   uuid [not null, ref: > photos.id]

  Note: '''
  리캡의 "테마 속 사진" 그리드. 열람용 사진까지 포함한다.
  표시 순서는 photos.taken_at 을 따르므로 별도 seq 를 두지 않는다.
  사용자 재정렬 기능이 생기면 그때 추가한다.

  화면 상단의 사진 개수는 클라가 응답 배열 길이로 계산한다.
  페이지네이션이 없으므로 개수를 따로 저장하거나 응답에 담지 않는다.
  '''

  indexes {
    (sticker_id, photo_id) [unique, name: 'uk_sticker_photo']
    photo_id [name: 'ix_sticker_photo_photo', note: '사진 파기 배치의 역방향 조회용']
  }
}

Table drawings {
  ~base_id
  board_id   uuid          [not null]
  sticker_id uuid          [null, note: 'scope=STICKER 일 때만 채운다']
  scope      drawing_scope [not null]
  type       drawing_type  [not null, default: 'STROKE', note: '선과 텍스트를 가르는 판별자']

  color   text [not null, note: '선 색 또는 글자 색. v2 요청은 #RRGGBB 만 허용']
  z_index integer [not null, default: 0, note: '스티커 z_index 와 같은 숫자 공간. v1 클라이언트는 stroke JSON 의 zIndex 키로 읽고 쓴다']

  stroke       jsonb  [null, note: 'type=STROKE 전용. 점 배열 등 선 데이터']
  stroke_width double [null, note: 'type=STROKE 전용']

  content   text   [null, note: 'type=TEXT 전용. 클라이언트가 실측한 줄바꿈을 그대로 저장. 최대 32자']
  font_size double [null, note: 'type=TEXT 전용']
  pos_x     double [null, note: 'type=TEXT 전용. 텍스트 상자 중심']
  pos_y     double [null, note: 'type=TEXT 전용. 텍스트 상자 중심']
  max_width double [null, note: 'type=TEXT 전용. 줄바꿈 기준이 된 편집창 폭']
  rotation  double [not null, default: 0, note: 'type=TEXT 에서만 의미가 있다. STROKE 는 회전을 점 좌표에 반영해 저장']

  ~timestamps
  ~soft_delete

  Note: '''
  스티커 주변에 그린 선은 해당 스티커 묶음에 포함되어 함께 이동/변형된다.
  스티커와 무관하게 배경에 그린 선은 보드에 고정된다.
  스티커 삭제 시 연결된 드로잉도 함께 제거.
  type 별 필수 컬럼은 CHECK 제약으로 강제한다. 텍스트는 API v2 에서만 읽고 쓸 수 있다.
  '''

  indexes {
    board_id   [name: 'ix_drawing_board']
    sticker_id [name: 'ix_drawing_sticker']
  }
}

// ── 리캡 ──────────────────────────────────
Table recap_comments {
  ~base_id
  sticker_id uuid [not null, ref: > stickers.id]
  content    text [not null]

  pos_x double [null, note: '스티커 기준 상대 좌표. 채워져 있으면 스티커 주변 말풍선, NULL이면 하단 "테마 분석" 키워드 칩']
  pos_y double [null, note: 'pos_x 와 항상 함께 NULL이거나 함께 채워진다']

  ~timestamps

  Note: '''
  LLM 생성 코멘트. 종류는 두 가지이고 좌표 유무로만 구분한다.
  - pos_x, pos_y 가 있으면 스티커 주변 말풍선 (디자인 기준 3개)
  - pos_x, pos_y 가 NULL 이면 하단 "테마 분석" 키워드 칩 (디자인 기준 9개)

  종류를 나타내던 is_float 컬럼은 제거했다. pos_x 가 이미 is_float 와 1:1로
  대응해 중복이었고, is_float=false 가 가리키던 "하단 순차 노출 문장형" UI 자체가
  사라졌기 때문이다. 그 문장형이 담던 한 줄 요약은 stickers.summary 로 옮겼다.

  노출 순서는 id(uuidv7) 오름차순. 한 번에 생성하고 재정렬이 없다.
  '''

  indexes {
    sticker_id [name: 'ix_recap_sticker']
  }
}
